--- a/Final Assignment/Final Assignment_CHAR/A2Matrix_CHAR/A2Matrix_CHAR.cbp
+++ b/Final Assignment/Final Assignment_CHAR/A2Matrix_CHAR/A2Matrix_CHAR.cbp
@@ -2,12 +2,12 @@
 <CodeBlocks_project_file>
 	<FileVersion major="1" minor="6" />
 	<Project>
-		<Option title="A2Matrix_INT" />
+		<Option title="A2Matrix_CHAR" />
 		<Option pch_mode="2" />
 		<Option compiler="gcc" />
 		<Build>
 			<Target title="Debug">
-				<Option output="bin/Debug/A2Matrix_INT" prefix_auto="1" extension_auto="1" />
+				<Option output="bin/Debug/A2Matrix_CHAR" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/Debug/" />
 				<Option type="1" />
 				<Option compiler="gcc" />
@@ -16,7 +16,7 @@
 				</Compiler>
 			</Target>
 			<Target title="Release">
-				<Option output="bin/Release/A2Matrix_INT" prefix_auto="1" extension_auto="1" />
+				<Option output="bin/Release/A2Matrix_CHAR" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/Release/" />
 				<Option type="1" />
 				<Option compiler="gcc" />
@@ -50,7 +50,7 @@
 		<Unit filename="main.c">
 			<Option compilerVar="CC" />
 		</Unit>
-		<Unit filename="matrixIO_INT.c">
+		<Unit filename="matrixIO_CHAR.c">
 			<Option compilerVar="CC" />
 		</Unit>
 		<Unit filename="relationFactor_INT.c">
@@ -69,6 +69,7 @@
 			<code_completion />
 			<envvars />
 			<debugger />
+			<lib_finder disable_auto="1" />
 		</Extensions>
 	</Project>
 </CodeBlocks_project_file>
